devtools/laymos/test/fixtures/story-ejection/invalid/direct-step-call.ts
import { step } from 'laymos/story';

export const result = step('Work', {}, operation());
